@@ -4,16 +4,16 @@ import dev.eduardovaz.api.v1.dto.AcaoDto;
 import dev.eduardovaz.api.v1.dto.AcaoResponseDto;
 import dev.eduardovaz.api.v1.mapper.AcaoMapper;
 import dev.eduardovaz.api.v1.model.Acao;
-import dev.eduardovaz.api.v1.model.Processo;
 import dev.eduardovaz.api.v1.repository.AcaoRepository;
 import dev.eduardovaz.api.v1.repository.ProcessoRepository;
 import dev.eduardovaz.core.base.BaseService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,8 +25,9 @@ public class AcaoService extends BaseService<Acao, AcaoRepository> {
     private final AcaoMapper acaoMapper;
 
     public AcaoResponseDto registrarAcao(Long processoId, AcaoDto acaoDto) {
-        Processo processo = processoRepository.findById(processoId)
-                .orElseThrow(() -> new RuntimeException("Processo não encontrado"));
+        if (!processoRepository.existsById(processoId)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Processo não encontrado");
+        }
 
 
         acaoDto.setProcessoId(processoId);
@@ -37,12 +38,13 @@ public class AcaoService extends BaseService<Acao, AcaoRepository> {
         List<Acao> acaos = repository.findByProcessoId(processoId);
         return acaos.stream()
                 .map(acaoMapper::toAcaoResponseDto) // Mapear para DTO
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public AcaoResponseDto atualizarAcao(Long acaoId, AcaoDto acaoDto) {
-        Acao acao = repository.findById(acaoId)
-                .orElseThrow(() -> new RuntimeException("Ação não encontrada"));
+        if (!repository.existsById(acaoId)) {
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Ação não encontrada");
+        }
 
         return acaoMapper.toAcaoResponseDto(repository.save(acaoMapper.toAcao(acaoDto)));
     }
