@@ -1,11 +1,9 @@
 package dev.eduardovaz.api.v1.service;
 
 
-import dev.eduardovaz.api.v1.dto.DocumentoResponseDto;
 import dev.eduardovaz.api.v1.dto.ParteDto;
 import dev.eduardovaz.api.v1.dto.ParteResponseDto;
 import dev.eduardovaz.api.v1.mapper.ParteMapper;
-import dev.eduardovaz.api.v1.model.Documento;
 import dev.eduardovaz.api.v1.model.Parte;
 import dev.eduardovaz.api.v1.model.Processo;
 import dev.eduardovaz.api.v1.repository.ParteRepository;
@@ -13,7 +11,9 @@ import dev.eduardovaz.api.v1.repository.ProcessoRepository;
 import dev.eduardovaz.core.base.BaseService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.web.server.ResponseStatusException;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -33,11 +33,11 @@ public class ParteService extends BaseService<Parte, ParteRepository> {
 
     public void associarPartesAoProcesso(List<Long> partesIds, Long processoId) {
         Processo processo = processoRepository.findById(processoId)
-                .orElseThrow(() -> new RuntimeException("Processo não encontrado"));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Processo não encontrado"));
 
         for (Long parteId : partesIds) {
             Parte parte = repository.findById(parteId)
-                    .orElseThrow(() -> new RuntimeException("Parte com ID " + parteId + " não encontrada"));
+                    .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Parte com ID " + parteId + " não encontrada"));
             processo.getPartes().add(parte);
         }
         processoRepository.save(processo);
@@ -45,18 +45,18 @@ public class ParteService extends BaseService<Parte, ParteRepository> {
 
     public ParteResponseDto obterParte(Long parteId) {
         return parteMapper.toParteResponseDto(repository.findById(parteId)
-                .orElseThrow(() -> new RuntimeException("Documento não encontrado")));
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Documento não encontrado")));
     }
 
     public List<ParteResponseDto> listarPartes() {
         List<Parte> partes = repository.findAll();
         return partes.stream()
                 .map(parteMapper::toParteResponseDto) // Mapear para DTO
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public ParteResponseDto editar(ParteDto parte) {
-        repository.findById(parte.getId()).orElseThrow(() -> new RuntimeException("Parte não encontrada"));//
+        repository.findById(parte.getId()).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Parte não encontrada"));//
         return parteMapper.toParteResponseDto(repository.save(parteMapper.toParte(parte)));
     }
 
